// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MenuItem renders correctly 1`] = `
<div>
  <li
    class="text-xs"
  >
    <a
      class="hover:underline"
      href="/work/my-first-project/01"
    >
      My First Project
    </a>
  </li>
</div>
`;

exports[`MenuItem renders correctly if project is active 1`] = `
<div>
  <li
    class="text-xs underline"
  >
    <a
      class="hover:underline"
      href="/work/my-first-project/01"
    >
      My First Project
    </a>
  </li>
</div>
`;
